# kanban

./: .gitignore  Makefile  README.md  pyproject.toml  schema.yml
.github/workflows/: black.yaml
app/migrations/: 0001_initial.py
app/models/: account.py
app/serializers/user/: create.py
app/views/: user.py
kanban/: settings.py  urls.py
